2021-09-06  Bart Schaefer  <schaefer@zsh.org>

	* Stephane Chazelas: 45180: Doc/Zsh/contrib.yo,
	Functions/Example/zpgrep, Functions/Misc/regexp-replace: clarify
	doc for POSIX EREs, fix an issue with PCRE when the replacement
	was empty or generated more than one element

	* zeurkous: 49154: Doc/Zsh/exec.yo: clarify status on exec failure

	* Marlon Richert: 49378: Src/parse.c: skip check for collision
	of aliases and functions when NO_EXEC

	* Marlon Richert: 49292: Src/Zle/complist.c: turn off colors
	before clearing to end of line

	* 49282: set $0 correctly when calling functions from hooks

	* 49266: fix segfault on metacharacters in long job texts

	* Marlon Richert: 49218: Functions/Misc/run-help,
	Functions/Misc/run-help-btrfs, Functions/Misc/run-help-git,
	Functions/Misc/run-help-ip, Functions/Misc/run-help-p4,
	Functions/Misc/run-help-svk, Functions/Misc/run-help-svn:
	run-help filters cmd_args before calling run-help-<command>

	* unposted (cf. 49202 and 49217): Src/Zle/zle_hist.c: insertlastword
	ignores blank/missing history entries when repeating

	* 49196: Src/Modules/db_gdbm.c: gdbm keys not present in the
	database appear unset in tied hashes

	* Marlon Richert: 48969: fix for "zle -N" completion

	* 48888: Doc/Zsh/mod_system.yo, Doc/Zsh/params.yo, Test/E03posix.ztst:
	improve doc for $$ and $PPID, add fail test for PPID readonly-ness

	* 48832: Completion/Unix/Type/_urls: try _gnu_generic first

2021-09-04  Oliver Kiddle  <opk@zsh.org>

	* Shohei YOSHIDA: 49343: Completion/Unix/Command/_md5sum:
	Fix file name completion of GNU digest utilities

	* 49345: Completion/Unix/Command/_git: fix git file completion
	for paths starting with ../

2021-08-29  Oliver Kiddle  <opk@zsh.org>

	* 49327: Completion/Unix/Command/_git: complete for new git
	maintenance, for-each-repo, sparse-checkout and bugreport commands

	* 49319: Completion/...: completion options update

	* 49317: Completion/Unix/Command/_transmission,